k8s/globosql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globodb
spec:
  selector:
    matchLabels:
      app: globodb
  replicas: 1
  template:
    metadata:
      labels:
        app: globodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: globodb
          image: dahlsailrunner/globomantics_database:latest
          ports:
            - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: globodb-service
spec:
  selector:
    app: globodb
  ports:
    - protocol: TCP
      port: 1434
      targetPort: 1433
      nodePort: 31433
  type: NodePort
